
PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4529: Pig on tez hit counter limit imposed by MR (daijy)

PIG-4524: Pig Minicluster unit tests broken by TEZ-2333 (daijy)

PIG-4527: NON-ASCII Characters in Javadoc break 'ant docs' (nielsbasjes via daijy)

PIG-4494: Pig's htrace version conflicts with that of hadoop 2.6.0 (daijy)

PIG-4519: Correct link to Contribute page (gliptak via daijy)

PIG-4514: pig trunk compilation is broken - VertexManagerPluginContext.reconfigureVertex change (thejas)

PIG-4503: [Pig on Tez] NPE in UnionOptimizer with multiple levels of union (rohini)

PIG-4509: [Pig on Tez] Unassigned applications not killed on shutdown (rohini)

PIG-4508: [Pig on Tez] PigProcessor check for commit only on MROutput (rohini)

PIG-4505: [Pig on Tez] Auto adjust AM memory can hit OOM with 3.5GXmx (rohini)

PIG-4502: E2E tests build fail with udfs compile (nmaheshwari via daijy)

PIG-4498: AvroStorage in Piggbank does not handle bad records and fails (viraj via rohini)

PIG-4499: mvn-build miss tez classes in pig-h2.jar (daijy)

PIG-4488: Pig on tez mask tez.queue.name (daijy)

PIG-4497: [Pig on Tez] NPE for null scalar (rohini)

PIG-4493: Pig on Tez gives wrong results if Union is followed by Split (rohini)

PIG-4491: Streaming Python Bytearray Bugs (jeremykarn via daijy)

PIG-4487: Pig on Tez gives wrong success message on failure in case of multiple outputs (rohini)

PIG-4483: Pig on Tez output statistics shows storing to same directory twice for union (rohini)

PIG-4480: Pig script failure on Tez with split and order by due to missing sample collection (rohini)
