@@ -66,6 +66,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4530: StackOverflow in TestMultiQueryLocal running under hadoop20 (nielsbasjes via rohini)
+
 PIG-4529: Pig on tez hit counter limit imposed by MR (daijy)
 
 PIG-4524: Pig Minicluster unit tests broken by TEZ-2333 (daijy)
